--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "oppurtunity-finder",
   "version": "1.0.0",
+  "engines": {
+    "node": "16.x"
+    },
   "private": true,
   "scripts": {
     "dev": "nuxt",
@@ -41,11 +44,11 @@
     "eslint-plugin-vue": "^9.5.1",
     "jest": "^29.1.2",
     "jest-environment-jsdom": "^29.1.2",
-    "postcss-html": "^1.5.0",
     "node-sass": "^6.0.0",
     "nuxt-property-decorator": "^2.1.3",
-    "sass-loader": "^10.1.0",
+    "postcss-html": "^1.5.0",
     "prettier": "^2.7.1",
+    "sass-loader": "^10.1.0",
     "stylelint": "^14.13.0",
     "stylelint-config-prettier": "^9.0.3",
     "stylelint-config-recommended-vue": "^1.4.0",
